# domain/contracts/eo_team_contract.go
@@ -10,7 +10,7 @@ import (
 
 type IEOTeamRepository interface {
 	CheckEventOwnership(ctx context.Context, eventId, userId uuid.UUID) (bool, error)
-	FindAllRegistrationsByEvent(ctx context.Context, eventId uuid.UUID, eventLevelId *uuid.UUID) ([]entity.Registration, error)
+	FindAllRegistrationsByEvent(ctx context.Context, eventId uuid.UUID, eventLevelId *uuid.UUID, institutionType *string) ([]entity.Registration, error)
 	FindRegistrationByIdAndEvent(ctx context.Context, registrationId, eventId uuid.UUID) (*entity.Registration, error)
 	UpdateRegistration(ctx context.Context, registration *entity.Registration) error
 	GetStats(ctx context.Context, eventId uuid.UUID) (*dto.EOTeamStatsRes, error)
@@ -18,7 +18,7 @@ type IEOTeamRepository interface {
 }
 
 type IEOTeamService interface {
-	GetListTeam(ctx context.Context, eventId, userId uuid.UUID, eventLevelId *uuid.UUID) ([]dto.EOTeamListRes, error)
+	GetListTeam(ctx context.Context, eventId, userId uuid.UUID, eventLevelId *uuid.UUID, institutionType *string) ([]dto.EOTeamListRes, error)
 	GetDetailTeam(ctx context.Context, eventId, userId, registrationId uuid.UUID) (*dto.EOTeamDetailRes, error)
 	ApproveTeam(ctx context.Context, eventId, userId, registrationId uuid.UUID, req dto.EOTeamApproveReq) error
 	RejectTeam(ctx context.Context, eventId, userId, registrationId uuid.UUID, req dto.EOTeamRejectReq) error
